user resource setup

--- a/SehaNotebook.API/SehaNotebook.API.csproj
+++ b/SehaNotebook.API/SehaNotebook.API.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SehaNotebook.DAL\SehaNotebook.DAL.csproj" />
+    <ProjectReference Include="..\SehaNotebook.Domain\SehaNotebook.Domain.csproj" />
   </ItemGroup>
 
 </Project>
