--- a/SehaNotebook.API/appsettings.json
+++ b/SehaNotebook.API/appsettings.json
@@ -8,5 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "conn" : "User ID=fady;Password=01283233951;Server=localhost;Port=5432;Database=SEHA; Integrated Security=true;Pooling=true;"
+  },
+  "JwtConfig": {
   }
 }
